--- a/workflow/config.yaml
+++ b/workflow/config.yaml
@@ -2,3 +2,4 @@ counts: "test/abundance_matrix.RDS"
 covariates: "test/covariates.RDS"
 formula: "Abundance ~ 1 + offset(log(Offset)) + Wind"
 criteria: ["BIC","StARS"]
+stability: 0.95
