Support .tsv and csv as input files (fixes #2)
* Add test data
* Disable offset computation by default
* Add schema validation for input files and formula

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -17,8 +17,8 @@ rule pln_prepare_data:
         "results/PLN/RDS/prepared_data.RDS"
     # Optional arguments for `prepare_data()`
     # Please provide them as python `key=value` pairs
-    #params:
-    #    offset="TSS"
+    params:
+        offset="none"
     log:
         "results/logs/prepare_data.log"
     conda:
